add custom unmount functionality

--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,10 @@ button:not(:last-child){
 .fact-container{
   margin-top: 30px;
 }
+
+
+#unmount-btn {
+  position: fixed;
+  top: 10px;
+  right: 10px;
+}
